--- a/Front/src/assets/css/s-fonts.css
+++ b/Front/src/assets/css/s-fonts.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 's-icon';
-  src:  url('../fonts/s-icon.eot?8cx45e');
-  src:  url('../fonts/s-icon.eot?8cx45e#iefix') format('embedded-opentype'),
-  url('../fonts/s-icon.ttf?8cx45e') format('truetype'),
-  url('../fonts/s-icon.woff?8cx45e') format('woff'),
-  url('../fonts/s-icon.svg?8cx45e#s-icon') format('svg');
+  src:  url('../fonts/s-icon.eot?cuhtwe');
+  src:  url('../fonts/s-icon.eot?cuhtwe#iefix') format('embedded-opentype'),
+  url('../fonts/s-icon.ttf?cuhtwe') format('truetype'),
+  url('../fonts/s-icon.woff?cuhtwe') format('woff'),
+  url('../fonts/s-icon.svg?cuhtwe#s-icon') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -14,6 +14,9 @@
 }
 .icon-money-02:before {
   content: "\e992";
+}
+.icon-qq:before {
+  content: "\e995";
 }
 .icon-choose:before {
   content: "\e993";
