flow非法名字验证

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2831,3 +2831,4 @@ md-menu-content.md-default-theme .md-menu>.md-button:after, md-menu-content .md-
 .form-control.form-control-none{border:none;padding:0;}
 .form-control.form-control-none .md-select-value{height:32px;}
 .form-validation .form-control.ng-dirty.ng-invalid{border-color:#d5dce4;}
+.error-message {color: red;}
