--- a/www.newbidder.com/css/campaign.css
+++ b/www.newbidder.com/css/campaign.css
@@ -14,4 +14,7 @@ body{font-family:"Helvetica Neue", Helvetica,sans-serif,Verdana,Tahoma, Arial, "
 .author{color:#999;display:block;float:right;font-size:12px;line-height:32px;}
 @media (min-width: 320px) and (max-width:768px){
     .bidder-col img.img-w{width:100%;}
+    .bidder-col img{width:95%;}
+    .bidder-box h1{margin:30px 0;}
+
 }
