--- a/Front/src/assets/css/style.css
+++ b/Front/src/assets/css/style.css
@@ -1,3 +1,5 @@
+body {
+    font-family: Helvetica,"Helvetica Neue",Arial,sans-serif;color:#000;}
 .modal-open {
     overflow: inherit !important;padding-right: 0 !important;}
 .small-font{
@@ -60,12 +62,14 @@
 .pricing-box{margin:0 -30px 30px -30px;}
 .pricing-box .li-con{width:24.15%;float:left;margin-right: 8px;margin-bottom:15px;}
 .pricing-box .my-price{-webkit-transition: all 0.3s;
-    transition: all 0.3s;background:#fbfbfb;box-shadow:0 0 3px #d4d4d4;border-radius:2px;padding:15px 0 30px 0;}
+    transition: all 0.3s;background:#f6f8f8;box-shadow:0 0 3px #d4d4d4;border-radius:2px;padding:15px 0 30px 0;}
 .pricing-box li{-webkit-transition: all 0.3s;
-    transition: all 0.3s;background:#fbfbfb;box-shadow:0 0 3px #d4d4d4;margin:0 1.13333% 0 0;border-radius:2px;height:auto;padding:0 0 15px 0;}
+    transition: all 0.3s;background:#f6f8f8;margin:0 1.13333% 0 0;border-radius:3px;height:auto;padding:0 0 20px 0;
+    box-shadow:0 1px 1px 0 rgba(0, 0, 0, 0.1),
+    0 1px 1px 0 rgba(0, 0, 0, 0.1),
+    0 1px 1px 0 rgba(0, 0, 0, 0.1);}
 .pricing-box li:nth-last-child(1){margin:0;}
 .pricing-box .li-con:nth-last-child(1){margin:0;}
-.p-header{margin:25px 0 20px 0;}
 .p-header-box{text-align:center;}
 
 .p-edit i, .edit-pricing-box h2 a i{
@@ -78,7 +82,7 @@
 .edit-pricing-box li.h-line{border-top:2px solid #ff8c00;}
 .edit-pricing-box li.h-line:hover{-webkit-transform: scale(1,1);transform: scale(1,1);border:2px solid #ff8c00;}
 .edit-pricing-box li.h-line .money-size,.edit-pricing-box li.h-line .money-icon{color:#ff8c00;}
-.p-header{margin:25px 0 5px 0;}
+.p-header{margin:25px 0 20px 0;}
 .p-header-box{text-align:center;}
 .p-header-box h2{font-size:16px;color:#b3b3b3;margin:15px 0 0 0;}
 .p-header .money-icon{color:#357cf3;font-size:18px;vertical-align:top;line-height:24px;}
@@ -88,14 +92,13 @@
 .p-header.p-header2{color:#999;}
 .p-header.p-header2 .money-size,.p-header.p-header2 .money-icon{color:#95a4b5;}
 .p-header.p-header2 .money-size{text-decoration:line-through}
-.edit-pricing-box .col-md-8.my-price-l{color:#333;border:none;padding-right:80px;}
+.edit-pricing-box .col-md-8.my-price-l{color:#333;border:none;padding-right:20px;}
 .edit-pricing-box .my-price-l:hover,.p-pay li:hover{border:none;}
 .edit-pricing-box .col-md-8{padding:0;}
 
 .p-header.p-header2{color:#999;}
 .p-header.p-header2 .money-size,.p-header.p-header2 .money-icon{color:#95a4b5;}
 .p-header.p-header2 .money-size{text-decoration:line-through}
-.edit-pricing-box .col-md-8.my-price-l{color:#333;border:none;padding-right:80px;}
 .edit-pricing-box .my-price-l:hover,.p-pay li:hover{border:none;}
 .edit-pricing-box .col-md-8{padding:0;}
 .p-edit{margin-bottom:20px;}
@@ -117,24 +120,24 @@
 .item_input:focus{outline:0;}
 
 .p-header-box h2{font-size:16px;color:#b3b3b3;}
-.p-header .money-icon{color:#357cf3;font-size:16px;vertical-align:top;line-height:24px;font-weight:600;}
-.p-header .money-size{color:#357cf3;font-size:36px;line-height:36px;font-weight:600;}
-.p-header .money-small{color:#b3b3b3;}
+.p-header .money-icon{color:#357cf3;font-size:18px;vertical-align:top;line-height:24px;font-weight:600;}
+.p-header .money-size{color:#357cf3;font-size:40px;line-height:40px;font-weight:600;}
+.p-header .money-small{color:#666;margin-right:3px;}
 
 .pricedesc{margin:5px 0 0 0;}
-.pricedesc p{line-height:18px;font-size:12px;margin:0;color:#333;font-weight:600;}
+.pricedesc p{line-height:20px;font-size:14px;margin:2px 0 5px 0;color:#000;font-weight:500;}
 .pricedesc p i{margin:0 5px;}
-.pricedesc-list{border-top:1px solid #f3f3f3;margin:5px auto;display:inline-block;width:100%;font-weight:500;height:310px;}
-.pricedesc-list li{background:transparent;font-size:12px;color:#333;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#eee;box-shadow:none;border-radius:0;display: table;vertical-align: middle;text-align:center;padding:8px 0;}
+.pricedesc-list{border-top:1px solid #f3f3f3;margin:10px auto 0 auto;display:inline-block;width:100%;font-weight:500;height:210px;padding:0 10px;}
+.pricedesc-list li{background:transparent;font-size:13px;color:#000;width:100%;border-width:0 0 1px 0;border-style:solid;border-color:#eee;box-shadow:none;border-radius:0;display: table;vertical-align: middle;text-align:center;padding:10px 0;}
 .pricedesc-list li:hover{border-width:0 0 1px 0;border-style:solid;border-color:#f3f3f3;}
 .pricedesc-list li i{margin:0 5px;color:#494949;}
 .pricedesc-list .hg{line-height:normal;height:42px;}
 .pricedesc-list .hg em{font-size:20px;color:#999;}
-.p-btn{color:#357cf3;border-radius:2px;background:#fff;-webkit-transition-duration: 0.6s; /* Safari */
-    transition-duration: 0.6s;height:38px;line-height:36px;padding:0;width:148px;font-size:12px;border:2px solid #d5dce4;font-weight:600;}
+.p-btn{border-radius:3px;background:#357cf3;-webkit-transition-duration: 0.6s; /* Safari */
+    transition-duration: 0.6s;height:36px;line-height:36px;padding:0 10px 0 20px;font-size:13px;border:2px solid #357cf3;font-weight:600;color:#fff;}
 .p-btn:hover{background:#357cf3;color:#fff;border:2px solid #357cf3;}
-.p-btn i{margin:5px 0  0 10px;font-size:18px;}
-.p-btn.btn-three{color:#357cf3;margin:0 auto;display: block;}
+.p-btn i{margin:8px 0  0 10px;font-size:19px;width:14px;height:14px;float:right;}
+.p-btn.btn-three{color:#fff;margin:0 auto;display: block;}
 .p-btn.btn-three:hover{color:#fff;}
 .btn-three{color:#fff;-webkit-transition: all 0.5s;transition: all 0.5s;position: relative;}
 .btn-three::before {
@@ -145,7 +148,7 @@
     width: 100%;
     height: 100%;
     z-index: 1;
-    background-color: rgba(255,255,255,0.1);
+    background-color: rgba(255,255,255,0.05);
     -webkit-transition: all 0.3s;
     transition: all 0.3s;}
 .btn-three:hover::before {opacity: 0 ;-webkit-transform: scale(0.5,0.5); transform: scale(0.5,0.5);}
@@ -153,7 +156,7 @@
     border: 1px solid rgba(255,255,255,0.5);-webkit-transform: scale(1.2,1.2);transform: scale(1.2,1.2);}
 .btn-three:hover::after {opacity:1;-webkit-transform: scale(1,1);transform: scale(1,1);}
 .pricing-box {color:#fff;}
-.p-header-box h2{background:rgb(100,181,246);color: rgb(250,250,250);font-weight:bold;font-size:14px;height: 32px;line-height: 32px;border-radius: 2px 2px 0 0;margin:0;}
+.p-header-box h2{background:#8494a2;color: rgb(250,250,250);font-weight:bold;font-size:14px;height: 32px;line-height: 32px;border-radius: 2px 2px 0 0;margin:0;}
 .col-md-4.active .p-header .money-icon,.col-md-4.active .p-header .money-size,.col-md-4.active .p-header .money-small{color:#fff;}
 .titletwo{text-align:left;color:#333;margin-bottom:30px;}
 .col-md-4.active .icon-question-sign{color:#fff;}
