NB-247 campaign path 样式

--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2387,6 +2387,7 @@ md-select:not([disabled]):focus .md-select-value{
     background-color: #fff;
     opacity: 0.6;
     z-index: 10;
+    height: 100%;
 }
 .cs-conditions{
     margin-top: -10px;
