--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -87,7 +87,6 @@ header.navbar {
     z-index: 61;
     width: 100%;
     background:#fff;
-    border-bottom:1px solid #c9c9c9;
     color: #fff;
 }
 
@@ -177,14 +176,15 @@ header .home:hover{
     margin-top: 8px;
 }
 .navi ul.nav li.active a {
-    font-weight:700;
-    color:#2770ea;
-    background:#e8e8e8;
+    font-weight:600;
+    color:#fff;
+    background:#0055bf;
 }
-.navi ul.nav li.active a i,.navi ul.nav li.active a:hover i{color:#2770ea;}
-.navi ul.nav li a{color:#000;height:46px;line-height:46px;padding:0 17px;}
-.navi ul.nav li a i{color:#393e42}
-.navi ul.nav li a:hover i{color:#393e42}
+.navi ul.nav li.active a i,.navi ul.nav li.active a:hover i{color:#fff;}
+.navi ul.nav li a{color:#fff;height:42px;line-height:42px;padding:0 17px;}
+.navi ul.nav li a:hover{background:#0055bf;}
+.navi ul.nav li a i{color:#fff}
+.navi ul.nav li a:hover i{color:#fff}
 .nav-icon {
     margin-top: 5px;
 }
@@ -673,8 +673,7 @@ md-sidenav.md-closed{
     display: inline;
 }
 .navi{
-    margin-top:46px;
-    border-bottom:1px solid #e8e8e8;
+    margin-top:46px;background:#2770ea;
 }
 .navi ul.nav li{
     float: left;
@@ -2421,9 +2420,12 @@ md-select:not([disabled]):focus .md-select-value{
     padding-right: 15px;
 }
 .cs-select-content{
-    background: rgba(45, 168, 249, 0.18);
-    padding: 10px;
-    border-radius: 4px;
+    background:#f6f8f8;
+    padding:10px;
+    border-radius:3px;
+    box-shadow:0 1px 1px 0 rgba(0, 0, 0, 0.1),
+    0 1px 1px 0 rgba(0, 0, 0, 0.1),
+    0 1px 1px 0 rgba(0, 0, 0, 0.1);
 }
 .cs-l2select-l1panel,
 .cs-l2select-l2panel{
@@ -2431,7 +2433,7 @@ md-select:not([disabled]):focus .md-select-value{
 }
 .cs-select-query input{
     width: 100%;
-    border-radius: 5px;
+    border-radius:3px;
     border: 1px solid #c9c9c9;
     padding: 5px;
     line-height: 15px;
@@ -2445,15 +2447,17 @@ md-select:not([disabled]):focus .md-select-value{
 .options-list{
     height: 150px;
     overflow: auto;
-    padding: 15px;
+    padding: 10px;
 }
 .list-content .md-chips{
     height: 197px;
-    background: rgba(45, 168, 249, 0.18);
-    box-shadow: none;
     overflow-y: auto;
+    background:#f6f8f8;
     padding:10px;
-    border-radius: 4px;
+    border-radius:3px;
+    box-shadow:0 1px 1px 0 rgba(0, 0, 0, 0.1),
+    0 1px 1px 0 rgba(0, 0, 0, 0.1),
+    0 1px 1px 0 rgba(0, 0, 0, 0.1);
 }
 .list-content .md-chips .md-chip{
     font-size: 12px;
@@ -2474,7 +2478,7 @@ md-select:not([disabled]):focus .md-select-value{
 }
 .chips-content .md-chips{
     /*background: rgba(45, 168, 249, 0.18);*/
-    min-height: 38px;
+    min-height: 32px;
     border: 1px solid #c9c9c9;
     box-shadow: none !important;
     padding:0px;
@@ -2486,7 +2490,7 @@ md-select:not([disabled]):focus .md-select-value{
     border-radius: 4px;*/
 }
 .md-chips .md-chip-input-container md-autocomplete input{
-    padding: 0 15px;
+    padding: 0;
 }
 .md-chips md-chip{
     font-size: 70%;
@@ -2663,7 +2667,7 @@ md-dialog .md-actions, md-dialog md-dialog-actions{background:#e4e6e7;border-top
 md-dialog md-dialog-content.botblack-height{overflow:initial;}
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td{vertical-align:middle}
 .navi ul.nav li .nav-tip{position:relative;}
-.navi ul.nav li .icon-question-sign{margin:17px 0 0 8px;float:right;}
+.navi ul.nav li .icon-question-sign{margin:14px 0 0 8px;float:right;}
 .navi ul.nav li .icon-question-sign .nav-tips-font{display:none;}
 .navi ul.nav li .icon-question-sign:hover .nav-tips-font{padding:5px 5px 5px 8px;width:185px;line-height:15px;background:#444;color:#fff;position:absolute;top:-35px;left:0px;display:block;border-radius:3px;font-size:12px;z-index:99;}
 .md-table-pagination{border:none;padding:0 15px;}
@@ -2795,12 +2799,12 @@ input[type=password]:disabled, input[type=radio]:disabled, input[type=text]:disa
 .campaign-path-box .masking-loader {
   position: absolute;
 }
-.nav-col i{width:21px;height:20px;float:left;margin:13px 5px 0 0;}
-.nav-col i.mtop{margin:14px 5px 0 0;}
-.nav-col i.mtop2{margin:16px 5px 0 0;}
+.nav-col i{width:21px;height:20px;float:left;margin:12px 5px 0 0;}
+.nav-col i.mtop{margin:13px 5px 0 0;}
+.nav-col i.mtop2{margin:14px 5px 0 0;}
 
 .navbar-box{min-height:46px;height:46px;}
-.navbar-box a{line-height:45px;height:45px;margin-top:-1px;border-left:1px solid #d5d5d5;background:#fff;}
+.navbar-box a{line-height:46px;height:46px;margin-top:-1px;border-left:1px solid #d5d5d5;background:#fff;}
 .navbar-box a:hover{
     background: #f6f8f8;
     background: -moz-linear-gradient(top, #e9e9e9 0, #fff 100%);
