--- a/Front/src/assets/css/my.css
+++ b/Front/src/assets/css/my.css
@@ -2052,6 +2052,7 @@ input[type="checkbox"].th-checkbox{
 }
 .cs-flow-content{
     padding-left: 20px;
+    position: relative;
 }
 .form-content{
     max-width:auto;
@@ -2082,6 +2083,7 @@ md-content.cs-main-content{
     position: absolute;
     bottom: 0;
     right: 15px;
+    z-index: 12;
 }
 .top-btn-list{
     text-align: right;
@@ -2335,13 +2337,12 @@ md-select:not([disabled]):focus .md-select-value{
 .cs-deleted-mask{
     position: absolute;
     top:67px;
-    bottom: 37px;
+    bottom: 0;
     left: 0;
     right: 0;
     background-color: #fff;
     opacity: 0.6;
     z-index: 10;
-    height: 100%;
 }
 .cs-conditions{
     margin-top: -10px;
